fixed some undocumented a11y contrast issues for tasks

--- a/ui/apps/io.ox/tasks/style.less
+++ b/ui/apps/io.ox/tasks/style.less
@@ -232,7 +232,7 @@
     .detail-label {
 
         cursor: default;
-        color: #aaa;
+        color: #767676;
         text-align: left;
         padding-top: 8px;
         line-height: 24px;
