--- a/ui/apps/themes/definitions.less
+++ b/ui/apps/themes/definitions.less
@@ -170,15 +170,15 @@
 // tasks app
 //----------------------
 @task-priority:                         #ff4700;
-@badge-deferred-bg: #aaaaaa;
+@badge-deferred-bg: #767676;
 @badge-deferred-color: @white;
-@badge-inprogress-bg: #aaaaaa;
+@badge-inprogress-bg: #767676;
 @badge-inprogress-color: @white;
-@badge-notstarted-bg: #aaaaaa;
+@badge-notstarted-bg: #767676;
 @badge-notstarted-color: @white;
 @badge-done-bg: @green;
 @badge-done-color: @white;
-@badge-waiting-bg: #aaaaaa;
+@badge-waiting-bg: #767676;
 @badge-waiting-color: @white;
 @badge-overdue-bg: @blue;
 @badge-overdue-color: @white;
